--- a/ShadowRocket-Template-Rule-Config.conf
+++ b/ShadowRocket-Template-Rule-Config.conf
@@ -30,25 +30,20 @@ update-url = https://cdn.jsdelivr.net/gh/yeehonglee/ShadowRocket-Template-Rule-C
 🍎苹果服务 = select,🚀直接连接,🔰国外流量,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
 🔽IDM = select,🚀直接连接,🔰国外流量
 🚀直接连接 = select,DIRECT
-AIRPORT = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=*,use=true
-AIRPORT-HK = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=港,use=true
-AIRPORT-TW = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=台湾,use=true
-AIRPORT-SG = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=新加坡,use=true
-AIRPORT-JP = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=日本,use=true
-AIRPORT-Korea = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=韩国,use=true
-AIRPORT-US = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=美国,use=true
-AIRPORT-India = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=印度,use=true
-AIRPORT-EN = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=英国,use=true
-AIRPORT-Ireland = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=爱尔兰,use=true
-AIRPORT-RU = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=俄罗斯,use=true
-AIRPORT-Canada = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=加拿大,use=true
-AIRPORT-FR = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=法国,use=true
-AIRPORT-AU = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=澳大利亚,use=true
-
-
-
-
-
+AIRPORT = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=*
+AIRPORT-HK = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=港
+AIRPORT-TW = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=台湾
+AIRPORT-SG = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=新加坡
+AIRPORT-JP = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=日本
+AIRPORT-Korea = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=韩国
+AIRPORT-US = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=美国
+AIRPORT-India = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=印度
+AIRPORT-EN = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=英国
+AIRPORT-Ireland = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=爱尔兰
+AIRPORT-RU = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=俄罗斯
+AIRPORT-Canada = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=加拿大
+AIRPORT-FR = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=法国
+AIRPORT-AU = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=澳大利亚
 
 [Rule]
 DOMAIN-SUFFIX,smtp,DIRECT
