--- a/ShadowRocket-Template-Rule-Config.conf
+++ b/ShadowRocket-Template-Rule-Config.conf
@@ -8,42 +8,42 @@ dns-server = system
 update-url = https://cdn.jsdelivr.net/gh/zuluion/ShadowRocket-Template-Rule-Config@master/ShadowRocket-Template-Rule-Config.conf
 
 [Proxy Group]
-🔰国外流量 = select,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-⚓️其他流量 = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-✈️Telegram = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎙Discord = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-📘Facebook = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎬Youtube = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎬TikTok = select,AIRPORT-US,🔰国外流量,AIRPORT,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU
-🎬Netflix = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎬DisneyPlus = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎬Hulu = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎬HBO = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎬哔哩哔哩 = select,🚀直接连接,🔰国外流量,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎬国外媒体 = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎧Spotify = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🎮Steam = select,🚀直接连接,🔰国外流量,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-💻Microsoft = select,🚀直接连接,🔰国外流量,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🧧Paypal = select,🔰国外流量,🚀直接连接,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🚚Amazon = select,🚀直接连接,🔰国外流量,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-📡Speedtest = select,🚀直接连接,🔰国外流量,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
-🍎苹果服务 = select,🚀直接连接,🔰国外流量,AIRPORT-HK,AIRPORT-TW,AIRPORT-SG,AIRPORT-JP,AIRPORT-Korea,AIRPORT-US,AIRPORT-India,AIRPORT-EN,AIRPORT-Ireland,AIRPORT-RU,AIRPORT-Canada,AIRPORT-FR,AIRPORT-AU,AIRPORT
+🔰国外流量 = select,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+⚓️其他流量 = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+✈️Telegram = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎙Discord = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+📘Facebook = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎬Youtube = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎬TikTok = select,🇺🇸 AIRPORT-US,🔰国外流量,AIRPORT,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU
+🎬Netflix = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎬DisneyPlus = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎬Hulu = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎬HBO = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎬哔哩哔哩 = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎬国外媒体 = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎧Spotify = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🎮Steam = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+💻Microsoft = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🧧Paypal = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🚚Amazon = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+📡Speedtest = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🍎苹果服务 = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🔽IDM = select,🚀直接连接,🔰国外流量
 🚀直接连接 = select,DIRECT
 AIRPORT = url-test,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=*
-AIRPORT-HK = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=港
-AIRPORT-TW = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=台湾
-AIRPORT-SG = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=新加坡
-AIRPORT-JP = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=日本
-AIRPORT-Korea = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=韩国
-AIRPORT-US = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=美国
-AIRPORT-India = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=印度
-AIRPORT-EN = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=英国
-AIRPORT-Ireland = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=爱尔兰
-AIRPORT-RU = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=俄罗斯
-AIRPORT-Canada = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=加拿大
-AIRPORT-FR = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=法国
-AIRPORT-AU = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=澳大利亚
+🇭🇰 AIRPORT-HK = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=港
+🇨🇳 AIRPORT-TW = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=台湾
+🇸🇬 AIRPORT-SG = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=新加坡
+🇯🇵 AIRPORT-JP = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=日本
+🇰🇷 AIRPORT-Korea = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=韩国
+🇺🇸 AIRPORT-US = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=美国
+🇮🇳 AIRPORT-India = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=印度
+🇬🇧 AIRPORT-EN = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=英国
+🇮🇪 AIRPORT-Ireland = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=爱尔兰
+🇷🇺 AIRPORT-RU = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=俄罗斯
+🇨🇦 AIRPORT-Canada = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=加拿大
+🇫🇷 AIRPORT-FR = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=法国
+🇦🇺 AIRPORT-AU = select,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=澳大利亚
 
 [Rule]
 DOMAIN-SUFFIX,smtp,DIRECT
