add stean downlaod rule

--- a/ShadowRocket-Template-Rule-Config.conf
+++ b/ShadowRocket-Template-Rule-Config.conf
@@ -49,6 +49,7 @@ AIRPORT = url-test,url=http://www.gstatic.com/generate_204,interval=86400,tolera
 DOMAIN-SUFFIX,smtp,DIRECT
 DOMAIN-KEYWORD,aria2,DIRECT
 DOMAIN,clash.razord.top,DIRECT
+DOMAIN-SUFFIX,lancache.steamcontent.com,DIRECT
 DOMAIN,yacd.haishan.me,🔰国外流量
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/IDM.yaml,🔽IDM
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/DownLoadClient.yaml,DIRECT
