change dns config ,add outlook ruleset and proxy group

--- a/ShadowRocket-Template-Rule-Config.conf
+++ b/ShadowRocket-Template-Rule-Config.conf
@@ -4,7 +4,16 @@ yaml = true
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-dns-server = system
+dns-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,223.5.5.5,119.29.29.29
+fallback-dns-server = system
+# 启用IPv6支持。false表示不启用，true表示启用。
+ipv6 = false
+# 首选IPv6。优先向IPv6的DNS服务器查询AAAA记录，优先使用AAAA记录。false表示不启用。
+prefer-ipv6 = false
+# 域名直接使用系统DNS进行解析。false表示不启用。
+dns-direct-system = false
+# 直连域名解析失败后使用代理。false表示不启用。
+dns-direct-fallback-proxy = true
 update-url = https://cdn.jsdelivr.net/gh/zuluion/ShadowRocket-Template-Rule-Config@master/ShadowRocket-Template-Rule-Config.conf
 
 [Proxy Group]
@@ -27,6 +36,7 @@ update-url = https://cdn.jsdelivr.net/gh/zuluion/ShadowRocket-Template-Rule-Conf
 🎮Netch = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 💻Microsoft = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 ☁OneDrive = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+📧OutLook = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🤖NewBing = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🧧Paypal = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🚚Amazon = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
@@ -68,6 +78,7 @@ RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Google.yaml,🔰国外流量
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/NewBing.yaml,🤖NewBing
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/OneDrive.yaml,☁OneDrive
+RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/OutLook.yaml,📧OutLook
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Microsoft.yaml,💻Microsoft
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Netflix.yaml,🎬Netflix 
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/DisneyPlus.yaml,🎬DisneyPlus 
@@ -88,6 +99,8 @@ RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Proxy.yaml,🔰国外流量
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Direct.yaml,DIRECT
 DOMAIN-SUFFIX,live.cn,🚀直接连接
+
+
 
 GEOIP,CN,DIRECT
 FINAL,⚓️其他流量
