add perplexity proxy group

--- a/ShadowRocket-Template-Rule-Config.conf
+++ b/ShadowRocket-Template-Rule-Config.conf
@@ -25,6 +25,7 @@ update-url = https://cdn.jsdelivr.net/gh/zuluion/ShadowRocket-Template-Rule-Conf
 🤖OpenAI = select,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🤖Claude = select,🇬🇧 AIRPORT-EN,🇺🇸 AIRPORT-US,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇮🇳 AIRPORT-India,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🤖Gemini = select,🇺🇸 AIRPORT-US,🇬🇧 AIRPORT-EN,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇮🇳 AIRPORT-India,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🤖Perplexity = select,🇺🇸 AIRPORT-US,🇬🇧 AIRPORT-EN,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇮🇳 AIRPORT-India,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🎬Youtube = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🎬TikTok = select,🇺🇸 AIRPORT-US,🔰国外流量,AIRPORT,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU
 🎬Netflix = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
@@ -72,6 +73,7 @@ DOMAIN,yacd.haishan.me,🔰国外流量
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/OpenAI.yaml,🤖OpenAI
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Claude.yaml,🤖Claude
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Gemini.yaml,🤖Gemini
+RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Perplexity.yaml,🤖Perplexity
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/DownLoadClient.yaml,DIRECT
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/ProxyClient.yaml,DIRECT
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/AdBlock.yaml,REJECT
